Fri May 15 02:33:11 GMT 2015  Olly Betts <olly@survex.com>

	* tests/soaktest/Makefile.mk: Use -no-fast-install instead of
	  -no-install for linking soaktest on platforms where libtool issues
	  a warning for -no-install, like we already do for all the other test
	  programs.

Fri May 15 02:14:16 GMT 2015  Olly Betts <olly@survex.com>

	* examples/simpleexpand.cc,examples/simpleindex.cc,
	  examples/simplesearch.cc: '#include <config.h>' in the examples, as
	  when compiling with xlC on AIX, _LARGE_FILES gets defined by
	  AC_SYS_LARGEFILE to enable large file support, and defining this
	  changes the ABI of std::string, so it also needs to be defined when
	  compiling code using Xapian.

Thu May 14 03:17:28 GMT 2015  Olly Betts <olly@survex.com>

	* backends/chert/chert_cursor.cc: Correct delete to delete [].

Tue May 12 14:33:28 GMT 2015  Olly Betts <olly@survex.com>

	* docs/deprecation.rst: Add deprecation of --preserve-nonduplicates
	  which happened in 1.2.4.

Tue May 12 07:38:12 GMT 2015  Olly Betts <olly@survex.com>

	* Makefile.am: Actually use $(NO_UNDEFINED).

Tue May 12 06:40:38 GMT 2015  Olly Betts <olly@survex.com>

	* configure.ac: Only pass -no-undefined when linking the library if
	  it's actually required for the current platform.  Sun C++ doesn't
	  link the C++ runtime libraries to shared objects, so the build
	  fails with -no-undefined.

Tue May 12 06:39:26 GMT 2015  Olly Betts <olly@survex.com>

	* INSTALL,configure.ac: Fix comment and doc typos.

Tue May 12 03:49:38 GMT 2015  Olly Betts <olly@survex.com>

	* configure.ac: Add workaround for odd <cmath> issue with Sun C++.

Tue May 12 03:49:15 GMT 2015  Olly Betts <olly@survex.com>

	* configure.ac: On Solaris, inet_ntop() needs -lnsl.

Tue May 12 03:48:48 GMT 2015  Olly Betts <olly@survex.com>

	* api/keymaker.cc: Fix error compiling with Sun C++.

Tue May 12 03:07:06 GMT 2015  Olly Betts <olly@survex.com>

	* include/xapian/attributes.h: Fix typo in definition of